# simulation-bridge

./: .coveragerc  .gitignore  .pylintrc  INSTRUCTION.md  README.md  USAGE.md  main.py  pyproject.toml  pytest.ini
agents/matlab/: .coveragerc  .pylintrc  README.md  SimulationBatch.m  SimulationStreaming.m  pyproject.toml  pytest.ini
agents/matlab/config/: config.yaml
agents/matlab/docs/examples/: simulation_agent_2.m
agents/matlab/matlab_agent/api/: simulation.yaml  simulation.yaml.template
agents/matlab/matlab_agent/config/: config.yaml  config.yaml.template
agents/matlab/matlab_agent/docs/: README.md
agents/matlab/matlab_agent/docs/examples/: SimulationStreaming.m  simulation.batch.yaml.example  simulation.batch_1.yaml.example  simulation.streaming.yaml.example  simulation_batch_1.m  simulation_streaming.m
agents/matlab/matlab_agent/docs/examples/batch-simulation/: README.md  SimulationBatch.m
agents/matlab/matlab_agent/docs/examples/batch-simulation/api/: simulation_batch.yaml.example
agents/matlab/matlab_agent/docs/examples/industrial-cooling-fan-anomaly-detection/: CoolingFanAnomalyDetectionExample.m  CoolingFanAnomalyDetectionReference.m  CoolingFanWithFaults.slxc  IndexIterator.m  README.md  detectCoolingFanAnomaly.m  diagnosticFeatures.m  diagnosticFeatures_streaming.m  downsampleNormalData.m  generateEnsembleTable.m  simulation.m
agents/matlab/matlab_agent/docs/examples/industrial-cooling-fan-anomaly-detection/Data_Generator/: AnomalyGeneratorLib.slx  CoolingFanWithFaults.slx  (+1 more)
agents/matlab/matlab_agent/docs/examples/streaming-simulation/: README.md
agents/matlab/matlab_agent/resources/: README.md  SimulationWrapper.m  use.yaml  use.yaml.template  use_matlab_agent.py
agents/matlab/matlab_agent/src/: main.py  run_default_agent.py
agents/matlab/matlab_agent/src/batch/: batch.py  matlab_simulator.py
agents/matlab/matlab_agent/src/comm/: connect.py  interfaces.py
agents/matlab/matlab_agent/src/comm/rabbitmq/: interfaces.py  message_handler.py  rabbitmq_manager.py
agents/matlab/matlab_agent/src/core/: agent.py  batch.py  config_manager.py  matlab_simulator.py  rabbitmq_manager.py  streaming.py
agents/matlab/matlab_agent/src/handlers/: message_handler.py
agents/matlab/matlab_agent/src/interfaces/: agent.py  config_manager.py  message_handler.py  rabbitmq_manager.py
agents/matlab/matlab_agent/src/streaming/: streaming.py
agents/matlab/matlab_agent/src/utils/: config_loader.py  config_manager.py  create_response.py  logger.py  performance_monitor.py
agents/matlab/matlab_agent/tests/: README.md  test_agent.py  test_batch.py  test_config_loader.py  test_config_manager.py  test_connect.py  test_core_integration.py  test_create_response.py  test_logger.py  test_main.py  test_matlab_simulator.py  test_message_handler.py  test_rabbitmq_manager.py  test_run_default_agent.py  test_streaming.py
agents/matlab/matlab_agent/tests/integration/: test_integration_rabbitmq_client.py
agents/matlab/matlab_agent/tests/unit/: test_batch.py  test_config_loader.py  test_logger.py  test_message_handler.py  test_rabbitmq_manager.py  test_streaming.py
agents/matlab/performance/: performance_analysis.py  report_performance.md  requirements.txt
agents/matlab/src/: run_default_agent.py
agents/matlab/src/core/: agent.py  rabbitmq_manager.py
agents/matlab/src/streaming/: streaming.py
(+179 files in other folders)
